--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SquashDownloader.Data\Squash.Data.csproj" />
+    <ProjectReference Include="..\Squash.Data\Squash.Data.csproj" />
     <ProjectReference Include="..\SquashDownloader.Domain\Squash.Domain.csproj" />
   </ItemGroup>
 
